compiler/tests/fa/errors/while_not_bool.salam
// انتظار: خطا۰۲۱
// زبان: فارسی
تابع اصلی:
    تاوقتی 5:
        چاپ "x"
    پایان
پایان
